# HomeCode-Public

./: .gitignore  README.md  arcane_isometric_tactics.py  ballistics_lab_arena.py  battleship_polished.py  bounceball.py  dialogue_escape_25d.py  elf_demon_arena_fps.py  endless_maze_opengl.py  fifth_signal_cyoa.py  galleon_trait_inquest.py  glass_city_cyoa.py  guessnumber.py  helloname.py  mega_fps_25d.py  newtons_echo_chamber_alpha.py  newtons_echo_chamber_alpha_FIRST.py  opengl_fps_pygame.py  oregon_trail_type.py  rpg2_5d.py  scratchpython.py  shadow_labyrinth_deluxe.py  shadow_labyrinth_opengl.py  shadow_labyrinth_ultimate.py  shadow_run_25d.py  sirenscale_cyoa.py  sirenscale_platformer 2.py  sirenscale_platformer.py  sirenscale_platformer_ogl.py  stock_investing_game.py  tactical_fps_pygame.py  target_range_fps_3d.py  wargames_800x480.py  wargames_terminal_800x480.py
fifth_signal_assets/: ASSET_LICENSES.md
newtons_echo_chamber_cpp/: .gitignore  CMakeLists.txt  README.md
newtons_echo_chamber_cpp/assets/textures/: CC0_SOURCES.md  LICENSE.md  MANIFEST.md  material_albedo.ppm
newtons_echo_chamber_cpp/assets/textures/tiles/: layer13_concrete_pavement_02.ppm  layer14_concrete_wall_003.ppm  layer15_corrugated_iron_03.ppm
newtons_echo_chamber_cpp/shaders/: hud.vert  particles.comp  particles.frag  particles.vert  resonance.frag  resonance.vert  rigid_broadphase.comp  rigid_integrate_hash.comp  scene.frag  scene.vert  shadow.vert
newtons_echo_chamber_cpp/src/: audio.cpp  audio.hpp  core.hpp  main.cpp  physics.cpp  physics.hpp  platform.cpp  platform.hpp  renderer.cpp  renderer.hpp
newtons_echo_chamber_cpp/tools/: gpu_physics_probe.cpp  texture_builder.cpp  vulkan_probe.cpp
